+ edit get random image

--- a/src/main/webapp/app/entity/job/job-list/job-list.component.html
+++ b/src/main/webapp/app/entity/job/job-list/job-list.component.html
@@ -137,7 +137,7 @@
 <ng-template #tile let-job="item">
   <div class="tile-container">
     <div class="logo-cont">
-      <div> <img class="logo-img" src="{{ '../../../../assets/images/JPEG/' + random() + '.jpeg'}}">
+      <div> <img class="logo-img" src="{{ '../../../../assets/images/JPEG/' + charAt_0(job.id) + '.jpeg'}}">
       </div>
       <div class="company-detail">
         <div class="company-title">
