--- a/src/main/webapp/app/shared/layout/header/header.component.html
+++ b/src/main/webapp/app/shared/layout/header/header.component.html
@@ -6,7 +6,7 @@
       </button>
     </div>
     <img class="logo" src="https://www.digikala.com/static/files/ddcba6ed.svg" alt="">
-    <div class="search-container">
+    <div class="search-container desktop-view">
       <mat-form-field style="text-align: right; font-size:small; width:100%">
         <mat-icon matPrefix>search</mat-icon>
         <input matInput placeholder="جست و جو">
