--- a/src/main/webapp/app/entity/job/job-list/job-list.component.scss
+++ b/src/main/webapp/app/entity/job/job-list/job-list.component.scss
@@ -3,12 +3,23 @@
   width: 100%;
 }
 
+.container-mobile {
+  width: 100%;
+
+}
+
 .filter-container {
   width: 25%;
   margin-left: auto;
   margin-top: 9%;
-  height: 0;
-  background-color: #fffefe;
+  height: auto;
+  background-color: inherit;
+
+}
+
+.mobile {
+  width: 100% !important;
+  padding: unset !important;
 }
 
 .check-box-cont {
@@ -27,6 +38,7 @@
   margin-right: auto;
   width: 75%;
   padding-top: 9%;
+
 }
 
 .tile-container {
@@ -61,6 +73,10 @@
 .company-title {
   font-size: larger;
   color: darkcyan;
+}
+
+.company-mobile-title {
+  font-size: smaller;
 }
 
 .company-chip {
