+ fix role service

--- a/src/main/webapp/app/shared/layout/header/header.component.html
+++ b/src/main/webapp/app/shared/layout/header/header.component.html
@@ -15,7 +15,7 @@
   </div>
   <div class="part-end">
     <button [matMenuTriggerFor]="userMenu" class="dropdown">
-      <img class="imeg" src="../../../../assets/images/JPEG/41581915.jpeg">
+      <img class="imeg" src="/assets/images/JPEG/1.jpeg">
     </button>
     <mat-menu #userMenu="matMenu">
       <div class="menu-container">
